<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiFi Direct</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="show_data_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="name">Name</string>
    <string name="cellNumber">Mobile Number</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="message">Message</string>
    <string name="send_data_to_server_button">Send</string>
    <string name="send_saved_data_to_server_button">Send Saved Data</string>
    <string name="title_activity_get_data">GetData</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hybrid_manetdtn">HybridMANETDTN</string>
    <string name="get_picture_button">Attach picture from gallery</string>
    <string name="gps_disabled_message">GPS is currently disabled. Would you like to enable it?</string>
</resources>
