<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.wifidirect.HybridMANETDTN">
        <TextView android:id="@+id/nameLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:paddingBottom="10dp"/>
        <EditText
            android:id="@+id/nameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameLabel"/>
        <TextView android:id="@+id/addressLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameField"
            android:text="@string/address"
            android:paddingBottom="10dp"/>
        <EditText
            android:id="@+id/addressField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressLabel"/>
        <TextView android:id="@+id/ageLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressField"
            android:text="@string/age"
            android:paddingBottom="10dp"/>
        <EditText
            android:id="@+id/ageField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ageLabel"/>

        <TextView android:id="@+id/messageLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ageField"
            android:text="@string/message"
            android:paddingBottom="10dp"/>
        <EditText
            android:id="@+id/messageField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/messageLabel"/>
        <Button
            android:id="@+id/btn_send_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_data_to_server_button"
            android:layout_below="@id/messageField"/>
</RelativeLayout>
