<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/details_view"
   >
    <!-- android:visibility="gone" -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_peer_button" />
            <Button
                android:id="@+id/btn_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect_peer_button" />
            <Button
                android:id="@+id/btn_start_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_file_button"
                android:visibility="visible" />
        </LinearLayout>
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent" android:layout_height="fill_parent">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/details_layout">
                <TextView android:id="@+id/nameLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/nameField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nameLabel"/>
                <TextView android:id="@+id/addressLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nameField"
                    android:text="@string/address"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/addressField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/addressLabel"/>
                <TextView android:id="@+id/ageLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/addressField"
                    android:text="@string/age"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/ageField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ageLabel"/>
                <Button
                    android:id="@+id/btn_send_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_data_to_server_button"
                    android:layout_below="@id/ageField"/>
            </RelativeLayout>
        </ScrollView>
        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/group_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/group_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/status_bar"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_height="37dp"
        android:layout_marginBottom="3dp"
        android:background="@android:color/background_dark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textColor="@android:color/white"
            android:id="@+id/status_text">
        </TextView>
    </LinearLayout>
</FrameLayout>
